--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lib-flexible": "^0.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
@@ -22,6 +23,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss-plugin-px2rem": "^0.8.1",
     "prettier": "^1.19.1",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
